--- a/index.html
+++ b/index.html
@@ -454,11 +454,14 @@ let playersDamage = {};
         // Crosshair logic
         const crosshair = document.getElementById('crosshair');
         document.addEventListener('mousemove', (event) => {
-            if (currentScreen === 'battle') {
-                crosshair.style.left = `${event.clientX}px`;
-                crosshair.style.top = `${event.clientY}px`;
-            }
-        });
+    if (currentScreen === 'battle') {
+        crosshair.style.left = `${event.clientX}px`;
+        crosshair.style.top = `${event.clientY}px`;
+    } else {
+        crosshair.style.display = 'none'; // Скрываем прицел, если не в режиме "battle"
+    }
+});
+
 
 
 
@@ -1086,9 +1089,12 @@ function updateWorldBossHealthDisplay() {
 }
 
 function changeScreen(screen) {
+    console.log(`Changing screen to: ${screen}`);
     currentScreen = screen;
     document.getElementById('shopMenu').style.display = 'none';
     document.getElementById('statusBar').style.display = 'none';
+    document.getElementById('monsterHealthDisplay').style.display = 'none'; // Скрываем отображение здоровья монстра
+    document.getElementById('crosshair').style.display = 'none'; // Скрываем прицел
     crosshair.style.display = (screen === 'battle' || screen === 'worldBoss') ? 'block' : 'none';
 
     document.getElementById('worldBossScreen').style.display = (screen === 'worldBoss') ? 'block' : 'none';
